--- a/index.html
+++ b/index.html
@@ -1064,12 +1064,12 @@
     };
 
     const maxVariableChanges = {
-        "ROR": 11,
-        "DOR": 23,
-        "COI": 3,
-        "EDO": 9,
-        "ROS": 5,
-        "ROD": 11
+        "ROR": 11, // 12 miesięcy - 1 domyślny
+        "DOR": 23, // 24 miesiące - 1 domyślny
+        "COI": 3,  // 4 lata - 1 domyślny
+        "EDO": 9,  // 10 lat - 1 domyślny
+        "ROS": 5,  // 6 lat - 1 domyślny
+        "ROD": 11  // 12 lat - 1 domyślny
     };
 
     const obligacjeConfig = {
@@ -1206,6 +1206,10 @@
         elements.stopaZmiennaBtn.checked = state.lastFormData.stopaZmienna || false;
         state.variableInflacjaChanges = state.lastFormData.variableInflacjaChanges ? [...state.lastFormData.variableInflacjaChanges] : [];
         state.variableStopaChanges = state.lastFormData.variableStopaChanges ? [...state.lastFormData.variableStopaChanges] : [];
+        // Reset zmiennych i widoczności przycisku przy zmianie typu
+        state.variableInflacjaChanges = [];
+        state.variableStopaChanges = [];
+        elements.addVariableBtn.style.display = "block"; // Pokaż przycisk przy zmianie typu
         updateVariableInputs();
     }
 
@@ -1414,6 +1418,10 @@
     
         if (changes.length >= maxChanges) {
             alert(`Osiągnięto maksymalną liczbę zmian dla obligacji ${typ} (${maxChanges}).`);
+            return;
+        }
+        if (changes.length >= maxChanges) {
+            elements.addVariableBtn.style.display = "none"; // Ukryj przycisk
             return;
         }
     
