--- a/index.html
+++ b/index.html
@@ -690,11 +690,11 @@
     color: #e0e0e0;
     }
 
-    body.dark-mode .variable-input-group .form-control,
+    /****body.dark-mode .variable-input-group .form-control,
     body.dark-mode .variable-input-group .form-range {
         background: #fff; /* Białe tło w trybie ciemnym */
-        color: #333333; /* Ciemny tekst dla kontrastu */
-    }
+    /*    color: #333333; /* Ciemny tekst dla kontrastu */
+    /*}*/
 
     body.dark-mode .container {
         background: #3a3a3a;
