--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
         font-size: 0.7em;
         padding: 2px;
         text-align: center;
+        background: #fff; /* Białe tło w trybie jasnym */
+        color: #333333; /* Ciemny tekst w trybie jasnym */
+        border: 1px solid #C2B280; /* Złota ramka */
+        border-radius: 5px;
     }
     .form-select {
         max-width: 100px;
@@ -148,6 +152,10 @@
     .input-group-text {
         font-size: 0.7em;
         padding: 2px 5px;
+        background: #fff; /* Białe tło w trybie jasnym */
+        color: #333333; /* Ciemny tekst w trybie jasnym */
+        border: 1px solid #C2B280; /* Złota ramka */
+        border-radius: 5px;
     }
     .sub-info {
         font-size: 0.4em;
@@ -580,27 +588,6 @@
         display: flex;
         flex-direction: column;
         align-items: center; /* Centrujemy pola wejściowe i suwaki w obrębie .form-group */
-    }
-    /* Styl dla pola liczbowego w sekcji zmiennych */
-    .variable-input-group .form-control {
-        height: 22px; /* Taka sama wysokość jak w sekcji "Kwota inwestycji" */
-        font-size: 0.7em; /* Taka sama wielkość czcionki */
-        padding: 2px; /* Takie samo padding */
-        text-align: center; /* Wyrównanie tekstu */
-        background: #fff; /* Białe tło w trybie jasnym */
-        color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #C2B280; /* Ramka w kolorze złotym */
-        border-radius: 5px;
-    }
-    /* Styl dla jednostki (np. "%" lub "miesiąca") */
-    .variable-input-group .input-group-text {
-        height: 22px; /* Taka sama wysokość jak pole liczbowe */
-        font-size: 0.7em;
-        padding: 2px 5px;
-        background: #fff; /* Białe tło w trybie jasnym */
-        color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #C2B280; /* Ramka w kolorze złotym */
-        border-radius: 5px;
     }
     
     /* Styl dla suwaka w sekcji zmiennych */
