--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         text-align: center;
         background: #fff; /* Białe tło w trybie jasnym */
         color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #C2B280; /* Złota ramka */
+        border: 1px solid #000000; /* Czarna ramka */
         border-radius: 5px;
     }
     .form-select {
@@ -152,9 +152,9 @@
     .input-group-text {
         font-size: 0.7em;
         padding: 2px 5px;
-        background: #fff; /* Białe tło w trybie jasnym */
+        background: #d3d3d3; /* Jasny szary w trybie jasnym */
         color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #C2B280; /* Złota ramka */
+        border: 1px solid #000000; /* Czarna ramka */
         border-radius: 5px;
     }
     .sub-info {
@@ -250,6 +250,18 @@
     body.dark-mode .result-container,
     body.light-mode .result-container {
         overflow: visible;
+    }
+    /* Tryb ciemny */
+    body.dark-mode .form-control {
+        background: #3a3a3a; /* Ciemne tło w trybie ciemnym */
+        color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
+        border: 1px solid #000000; /* Czarna ramka */
+    }
+    
+    body.dark-mode .input-group-text {
+        background: #666666; /* Ciemniejszy szary w trybie ciemnym */
+        color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
+        border: 1px solid #000000; /* Czarna ramka */
     }
 
     .chart-legend {
