--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
         color: #333333; /* Ciemny tekst w trybie jasnym */
         border: 1px solid #000000; /* Czarna ramka */
         border-radius: 5px;
+        box-sizing: border-box; /* Wlicza padding i border w wysokość */
+        line-height: 18px; /* Wyrównanie tekstu w pionie */
+        display: inline-flex; /* Lepsze wyrównanie w pionie */
+        align-items: center; /* Centrowanie tekstu w pionie */
+        justify-content: center; /* Centrowanie tekstu w poziomie */
     }
     .form-select {
         max-width: 100px;
@@ -150,12 +155,18 @@
         cursor: pointer;
     }
     .input-group-text {
+        height: 22px; /* Jawnie ustawiona wysokość */
         font-size: 0.7em;
         padding: 2px 5px;
-        background: #d3d3d3; /* Jasny szary w trybie jasnym */
+        background: #f5f5f5; /* Bardzo jasny szary w trybie jasnym */
         color: #333333; /* Ciemny tekst w trybie jasnym */
         border: 1px solid #000000; /* Czarna ramka */
         border-radius: 5px;
+        box-sizing: border-box; /* Wlicza padding i border w wysokość */
+        line-height: 18px; /* Wyrównanie tekstu w pionie */
+        display: inline-flex; /* Lepsze wyrównanie w pionie */
+        align-items: center; /* Centrowanie tekstu w pionie */
+        justify-content: center; /* Centrowanie tekstu w poziomie */
     }
     .sub-info {
         font-size: 0.4em;
