--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         text-align: center;
         background: #fff; /* Białe tło w trybie jasnym */
         color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #000000; /* Czarna ramka */
+        border: 1px solid #e0e0e0; /* Czarna ramka */
         border-radius: 5px;
         box-sizing: border-box; /* Wlicza padding i border w wysokość */
         line-height: 18px; /* Wyrównanie tekstu w pionie */
@@ -160,7 +160,7 @@
         padding: 2px 5px;
         background: #f5f5f5; /* Bardzo jasny szary w trybie jasnym */
         color: #333333; /* Ciemny tekst w trybie jasnym */
-        border: 1px solid #000000; /* Czarna ramka */
+        border: 1px solid #e0e0e0; /* Czarna ramka */
         border-radius: 5px;
         box-sizing: border-box; /* Wlicza padding i border w wysokość */
         line-height: 18px; /* Wyrównanie tekstu w pionie */
@@ -266,13 +266,11 @@
     body.dark-mode .form-control {
         background: #3a3a3a; /* Ciemne tło w trybie ciemnym */
         color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
-        border: 1px solid #000000; /* Czarna ramka */
     }
     
     body.dark-mode .input-group-text {
         background: #666666; /* Ciemniejszy szary w trybie ciemnym */
         color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
-        border: 1px solid #000000; /* Czarna ramka */
     }
 
     .chart-legend {
