--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
             (config.indeksowaneInflacja ? 
                 `Pierwszy rok: ${config.oprocentowanie}%, kolejne: inflacja + ${config.marza}%` : 
                 `Pierwszy m-c: ${config.oprocentowanie}%, kolejne: stopa NBP + ${config.marza}%`) : 
-            `Stałe: ${config.oprocentowanie}%`;
+            `Stałe oprocentowanie: ${config.oprocentowanie}%`;
         document.getElementById("oprocentowanieInfo").textContent = info;
     }
 
