--- a/index.html
+++ b/index.html
@@ -274,23 +274,25 @@
     body.dark-mode .form-control {
         background: #3a3a3a; /* Ciemne tło w trybie ciemnym */
         color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
+        border: 1px solid #444444;
     }
     
     body.dark-mode .input-group-text {
         background: #666666; /* Ciemniejszy szary w trybie ciemnym */
         color: #e0e0e0; /* Jasny tekst w trybie ciemnym */
+        border: 1px solid #444444;
     }
     /* Tryb ciemny */
     body.dark-mode .form-range,
     body.dark-mode .variable-range {
         background: #555555; /* Tło takie samo jak .input-group-text w trybie ciemnym */
-        border: 1px solid #555555; /* Czarna krawędź w trybie ciemnym */
+        border: none; /* Usunięcie ramki */
     }
     
     body.dark-mode .form-range::-webkit-slider-runnable-track,
     body.dark-mode .variable-range::-webkit-slider-runnable-track {
         background: #555555; /* Tło paska w trybie ciemnym */
-        border: 1px solid #555555;
+        border: none; /* Usunięcie ramki */
         border-radius: 5px;
         height: 5px;
     }
@@ -298,7 +300,7 @@
     body.dark-mode .form-range::-moz-range-track,
     body.dark-mode .variable-range::-moz-range-track {
         background: #555555; /* Tło paska w trybie ciemnym */
-        border: 1px solid #555555;
+        border: none; /* Usunięcie ramki */
         border-radius: 5px;
         height: 5px;
     }
@@ -306,7 +308,7 @@
     body.dark-mode .form-range::-ms-track,
     body.dark-mode .variable-range::-ms-track {
         background: #555555; /* Tło paska w trybie ciemnym */
-        border: 1px solid #555555;
+        border: none; /* Usunięcie ramki */
         border-radius: 5px;
         height: 5px;
     }
