--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     /* Styl ptaszka za pomocą ::after */
     .checkbox-custom::after {
-        ontent: "";
+        ontent: '✔';
         position: absolute;
         left: 4px;
         top: 2px;
