--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 
     /* Styl ptaszka za pomocą ::after */
     .checkbox-custom::after {
-        ontent: '✔';
+        content: "";
         position: absolute;
         left: 4px;
         top: 2px;
         width: 4px;
         height: 8px;
-        border: solid #000000; /* Biały ptaszek w trybie jasnym */
+        border: solid #000000; /* Czarny ptaszek w trybie jasnym */
         border-width: 0 2px 2px 0;
         transform: rotate(45deg);
         opacity: 0; /* Ukrywamy ptaszka, gdy checkbox nie jest zaznaczony */
