--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     }
     .form-row {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         margin-bottom: 10px;
         gap: 10px;
         align-items: flex-start;
