--- a/index.html
+++ b/index.html
@@ -657,13 +657,17 @@
         height: 100%;
     }
     .variable-rate-container {
-        margin-top: 15px;
+        /*margin-top: 15px;*/
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
     }
     .checkbox-row {
         display: flex;
         justify-content: center;
-        gap: 20px;
+        gap: 10px;
         margin-bottom: 10px;
     }
     .variable-inputs {
