--- a/index.html
+++ b/index.html
@@ -1142,19 +1142,19 @@
                     </div>
                     <div class="chart-legend">
                         <div class="legend-item" data-index="0">
-                            <div class="color-box" style="background-color: #28a745;" data-tooltip="">
+                            <div class="color-box" style="background-color: #D4C791;" data-tooltip="">
                                 <span class="value" id="valueKapital">-</span>
                             </div>
                             <span class="legend-text" id="legendKapital">Kapitał</span>
                         </div>
                         <div class="legend-item" data-index="1">
-                            <div class="color-box" style="background-color: #007bff;" data-tooltip="">
+                            <div class="color-box" style="background-color: #8B7D47;" data-tooltip="">
                                 <span class="value" id="valueOdsetki">-</span>
                             </div>
                             <span class="legend-text" id="legendOdsetki">Odsetki</span>
                         </div>
                         <div class="legend-item" data-index="2">
-                            <div class="color-box" style="background-color: #dc3545;" data-tooltip="">
+                            <div class="color-box" style="background-color: #A0522D;" data-tooltip="">
                                 <span class="value" id="valuePodatek">-</span>
                             </div>
                             <span class="legend-text" id="legendPodatek">Podatek</span>
