--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,7 @@
                             <span class="legend-text" id="legendPodatek">Podatek</span>
                         </div>
                     </div>
+                </div>
                 <div class="summary-footer">
                     <span class="highlight yellow" data-hover="3 miesięcy">Okres inwestycji: <span id="okresInwestycji">-</span> </span>
                     <span class="highlight green" data-hover="">Zysk netto: <span id="zyskNetto">-</span> </span>
