--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         font-size: 10px; /* Zmniejszona wielkość czcionki */
         white-space: nowrap;
         z-index: 10;
-        ackground-color: #000000; /* Domyślne tło */
+        background-color: #000000; /* Domyślne tło */
         color: #ffffff; /* Domyślny kolor tekstu */
     }
 
