--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Kalkulator Obligacji Skarbu Państwa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
-    <!-- Zastępujemy jsPDF na PDFMake -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.10/pdfmake.min.js"></script>
-    <!-- Dodajemy Roboto dla polskich znaków -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.10/vfs_fonts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -207,7 +205,7 @@
             padding: 2px;
             text-align: center;
             background: #fff;
-            color: #333333; /* Poprawiony kolor tekstu dla lepszej czytelności */
+            color: #333333;
             border: 1px solid #e0e0e0;
             border-radius: 5px;
             box-sizing: border-box;
@@ -245,8 +243,8 @@
         .form-range,
         .variable-input-group .form-range {
             margin-top: 5px;
-            height: 5px; /* Ujednolicona wysokość toru suwaka */
-            background: #d3d3d3; /* Jasnoszare tło w trybie jasnym */
+            height: 5px;
+            background: #d3d3d3;
             border-radius: 5px;
             -webkit-appearance: none;
             appearance: none;
@@ -831,7 +829,7 @@
             background: #666666;
             border: none;
             outline: none;
-            height: 5px; /* Ujednolicona wysokość toru suwaka */
+            height: 5px;
         }
         
         body.dark-mode .form-range::-webkit-slider-runnable-track,
@@ -867,7 +865,7 @@
         
         body.dark-mode .form-range::-webkit-slider-thumb,
         body.dark-mode .variable-input-group .form-range::-webkit-slider-thumb {
-            background: #8b7d47; /* Jaśniejszy kolor kciuka w trybie ciemnym dla lepszej widoczności */
+            background: #8b7d47;
             border: none;
             border-radius: 50%;
             width: 12px;
@@ -1144,6 +1142,7 @@
                 border-bottom: 2px solid #555;
             }
         }
+    </style>
 <div class="logo-container">
     <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
     <div class="zoom-controls" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); display: flex; gap: 5px;">
