--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         margin-bottom: 10px;
         gap: 15px;
         flex-wrap: wrap;
-        text-align: left;
+        text-align: center;
     }
     
     .form-group {
@@ -244,6 +244,7 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
     
     .input-group-text {
