--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                             </label>
                         </div>
                         <div class="variable-inputs" id="variableInputs" style="display: none;">
-                            <div class="variable-inputs-wrapper" id="variableInputsWrapper"></div>
+                            <div class="form-row" id="variableInputsWrapper"></div>
                             <button type="button" class="btn btn-secondary btn-sm" id="addVariableBtn" style="display: none;" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                         </div>
                     </div>
