--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
         font-size: 0.4em;
         margin-top: 2px;
         text-align: left;
+        min-height: 0.4em;
     }
     
     /* Opisy i dane */
