--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     .fields-wrapper {
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        align-items: stretch;
         margin-bottom: 10px;
         gap: 15px;
         flex-wrap: wrap;
