--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     .fields-wrapper {
         display: flex;
         justify-content: center;
-        align-items: stretch;
+        align-items: flex-start;
         margin-bottom: 10px;
         gap: 15px;
         flex-wrap: wrap;
@@ -315,7 +315,6 @@
         font-size: 0.4em;
         margin-top: 2px;
         text-align: left;
-        min-height: 0.4em;
     }
     
     /* Opisy i dane */
